--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "nodemon server.js",
     "task1": "nodemon src/task1.js",
+    "task2": "nodemon src/task2.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -17,6 +18,7 @@
   "author": "Vijay Krishna Bammidi",
   "license": "ISC",
   "dependencies": {
+    "csvtojson": "^2.0.10",
     "express": "^4.17.1"
   },
   "devDependencies": {
