--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
   "author": "Vijay Krishna Bammidi",
   "license": "ISC",
   "dependencies": {
+    "csv-parser": "^2.3.2",
     "csvtojson": "^2.0.10",
-    "express": "^4.17.1"
+    "event-stream": "^4.0.1",
+    "express": "^4.17.1",
+    "getstream-node": "^1.5.0",
+    "mongoose": "^5.7.13",
+    "stream": "0.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.1"
