Task 3 file added

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon server.js",
     "task1": "nodemon src/task1.js",
     "task2": "nodemon src/task2.js",
+    "task3": "nodemon src/task3.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
