--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon server.js",
     "task1": "nodemon src/task1.js",
     "task2": "nodemon src/task2.js",
-    "task3": "nodemon src/task3.js",
+    "task3": "babel-node src/task3.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -19,6 +19,8 @@
   "author": "Vijay Krishna Bammidi",
   "license": "ISC",
   "dependencies": {
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.3",
     "csv-parser": "^2.3.2",
     "csvtojson": "^2.0.10",
     "event-stream": "^4.0.1",
@@ -28,6 +30,9 @@
     "stream": "0.0.2"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-0": "^6.24.1",
     "nodemon": "^2.0.1"
   }
 }
