--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "description": "NodeJs HomeWork",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
     "task1": "nodemon src/task1.js",
     "task2": "nodemon src/task2.js",
-    "task3": "babel-node src/task3.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "task3": "babel-node src/task3.js"
   },
   "keywords": [
     "nodejs",
@@ -24,7 +22,6 @@
     "csv-parser": "^2.3.2",
     "csvtojson": "^2.0.10",
     "event-stream": "^4.0.1",
-    "express": "^4.17.1",
     "getstream-node": "^1.5.0",
     "mongoose": "^5.7.13",
     "stream": "0.0.2"
