--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "NodeJs HomeWork",
   "main": "index.js",
   "scripts": {
-    "task1": "nodemon src/task1.js",
-    "task2": "nodemon src/task2.js",
-    "task3": "babel-node src/task3.js"
+    "task1.1": "nodemon src/home_work1/task1.js",
+    "task1.2": "nodemon src/home_work1/task2.js",
+    "task1.3": "babel-node src/home_work1/task3.js",
+    "task2.1": "babel-node src/home_work2/task1.js",
+    "task2.2": "babel-node src/home_work2/task2.js"
   },
   "keywords": [
     "nodejs",
@@ -19,9 +21,12 @@
   "dependencies": {
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
+    "body-parser": "^1.19.0",
     "csv-parser": "^2.3.2",
     "csvtojson": "^2.0.10",
+    "eslint": "^6.7.2",
     "event-stream": "^4.0.1",
+    "express": "^4.17.1",
     "getstream-node": "^1.5.0",
     "mongoose": "^5.7.13",
     "stream": "0.0.2"
