--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "task1.1": "nodemon src/home_work1/task1.js",
     "task1.2": "nodemon src/home_work1/task2.js",
     "task1.3": "babel-node src/home_work1/task3.js",
-    "task2.1": "babel-node src/home_work2/task1.js"
+    "task2.1": "babel-node src/home_work2/task1.js",
+    "task3": "babel-node src/home_work3/task1.js"
   },
   "keywords": [
     "nodejs",
@@ -30,9 +31,14 @@
     "express-joi-validation": "^4.0.3",
     "getstream-node": "^1.5.0",
     "http-status-codes": "^1.4.0",
+    "joi": "^14.3.1",
     "mongoose": "^5.7.13",
+    "sequelize": "^5.21.3",
     "stream": "0.0.2",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "path": "^0.12.7",
+    "pg": "^7.17.1",
+    "pg-hstore": "^2.3.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
