--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "sequelize": "^5.21.3",
     "sequelize-cli": "^5.5.1",
     "stream": "0.0.2",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
