--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "getstream-node": "^1.5.0",
     "http-status-codes": "^1.4.0",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.13",
     "path": "^0.12.7",
     "pg": "^7.17.1",
