week7: Unit tests and config

--- a/package.json
+++ b/package.json
@@ -4,12 +4,8 @@
   "description": "NodeJs HomeWork",
   "main": "index.js",
   "scripts": {
-    "task1.1": "nodemon src/tasks/task1/task1.js",
-    "task1.2": "nodemon src/tasks/task1/task2.js",
-    "task1.3": "babel-node src/tasks/task1/task3.js",
-    "task2.1": "babel-node src/tasks/task2/task1.js",
-    "task3": "babel-node src/tasks/task3/app.js",
-    "task4": "babel-node src/app.js"
+    "test": "jest",
+    "task":"nodemon src/app.js"
   },
   "keywords": [
     "nodejs",
@@ -20,13 +16,19 @@
   "author": "Vijay Krishna Bammidi",
   "license": "ISC",
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/runtime": "^7.9.2",
     "@hapi/joi": "^16.1.8",
+    "acorn": "^7.1.1",
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
     "body-parser": "^1.19.0",
     "csv-parser": "^2.3.2",
     "csvtojson": "^2.0.10",
+    "dotenv": "^8.2.0",
     "eslint": "^6.7.2",
+    "jest": "^25.1.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "event-stream": "^4.0.1",
@@ -36,6 +38,7 @@
     "http-status-codes": "^1.4.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
+    "minimist": "^1.2.5",
     "mongoose": "^5.7.13",
     "path": "^0.12.7",
     "pg": "^7.17.1",
