--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "NodeJs HomeWork",
   "main": "index.js",
   "scripts": {
+    "test":"jest",
     "task1.1": "nodemon src/tasks/task1/task1.js",
     "task1.2": "nodemon src/tasks/task1/task2.js",
     "task1.3": "babel-node src/tasks/task1/task3.js",
@@ -20,13 +21,19 @@
   "author": "Vijay Krishna Bammidi",
   "license": "ISC",
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/runtime": "^7.9.2",
     "@hapi/joi": "^16.1.8",
+    "acorn": "^7.1.1",
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
     "body-parser": "^1.19.0",
     "csv-parser": "^2.3.2",
     "csvtojson": "^2.0.10",
+    "dotenv": "^8.2.0",
     "eslint": "^6.7.2",
+    "jest": "^25.1.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "event-stream": "^4.0.1",
@@ -36,6 +43,7 @@
     "http-status-codes": "^1.4.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
+    "minimist": "^1.2.5",
     "mongoose": "^5.7.13",
     "pg": "^7.17.1",
     "pg-hstore": "^2.3.3",
