--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "eslint": "^6.7.2",
-    "nodemon": "^2.0.0"
+    "nodemon": "^2.0.0",
+    "jest": "^25.1.0"
   }
 }
